color contrast Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 :root {
   --main-color: #2196f3;
   --main-color-alt: #1787e0;
-  --text-color-alt: #777;
+  --text-color-alt: #666;
   --section-background: #ececec;
   --main-transition: 300ms; 
   --main-padding: 6.25rem;
